# warrp

./: Cargo.toml  LICENSE  Makefile  README.md  build.rs
schemas/: signature.fbs  symbol.fbs  target.fbs  type.fbs  warp.fbs
src/: cmd.rs  lib.rs  plugin.rs
src/r2/: analysis.rs  cache.rs  ffi.rs  guid.rs  mod.rs
src/warp/: constraint.rs  container.rs  mod.rs  signature.rs  types.rs
tests/: test_guid.rs
