[package]
name = "core_warp"
version = "0.1.0"
edition = "2021"
authors = ["WARP Contributors"]
license = "LGPL-3.0"
description = "WARP signature format support for radare2"

[lib]
name = "core_warp"
crate-type = ["cdylib"]

[dependencies]
uuid = { version = "1.10", features = ["v5"] }
flatbuffers = "24.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sha1 = "0.10"
memmap2 = "0.9"
flate2 = "1.1"
warp = { git = "https://github.com/Vector35/warp", rev = "1.0.1" }

[build-dependencies]
flatc-rust = "0.2"

[profile.release]
opt-level = 3
lto = true
